@@ -3,6 +3,10 @@
 	  properties.
 	* Changed: Component::remove() will throw an exception when trying to
 	  a node that's not a child of said component.
+	* Added: Splitter objects are now faster, line numbers are accurately
+	  reported and use less memory.
+	* Added: MimeDir parser can now continue parsing with the same stream
+	  buffer.
 
 3.0.0-alpha2 (2013-05-22)
 	* Fixed: vCard URL properties were referencing a non-existant class.
